--- a/.github/workflows/cross_publish.yml
+++ b/.github/workflows/cross_publish.yml
@@ -22,7 +22,24 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - run: cross build --release --target x86_64-apple-darwin
-      - run: cross build --release --target x86_64-pc-windows-msvc
-      - run: cross build --release --target x86_64-unknown-linux-gnu
-      - run: cross build --release --target aarch64-apple-darwin
+          target: x86_64-apple-darwin
+          override: true
+      - run: cd mionative/native && cargo build --release --target x86_64-apple-darwin
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-pc-windows-msvc
+          override: true
+      - run: cd mionative/native && cargo build --release --target x86_64-pc-windows-msvc
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-gnu
+          override: true
+      - run: cd mionative/native && cargo build --release --target x86_64-unknown-linux-gnu
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: aarch64-apple-darwin
+          override: true
+      - run: cd mionative/native && cargo build --release --target aarch64-apple-darwin
