--- a/.github/workflows/cross_publish.yml
+++ b/.github/workflows/cross_publish.yml
@@ -30,16 +30,29 @@ jobs:
           toolchain: stable
           target: x86_64-apple-darwin
           override: true
-      - run: cd mionative/native && cargo build --release --target x86_64-apple-darwin
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --target x86_64-apple-darwin
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           target: x86_64-pc-windows-msvc
           override: true
-      - run: cd mionative/native && cargo build --release --target x86_64-pc-windows-msvc
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --target x86_64-pc-windows-msvc
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           target: aarch64-apple-darwin
           override: true
-      - run: cd mionative/native && cargo build --release --target aarch64-apple-darwin
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: build
+          args: --target aarch64-apple-darwin
+      - run: ls mionative/native/target
