--- a/.github/workflows/cross_publish.yml
+++ b/.github/workflows/cross_publish.yml
@@ -24,8 +24,12 @@ jobs:
           toolchain: stable
           target: x86_64-unknown-linux-gnu
           override: true
-      - run: cargo install cross
-      - run: cd mionative/native && cargo build --release --target x86_64-unknown-linux-gnu
+      - uses: actions-rs/cargo@v1
+        with:
+          use-cross: true
+          command: search
+          args: fastbloom-rs
+      - run: cd mionative/native && cross build --release --target x86_64-unknown-linux-gnu
       - run: ls mionative/native/target
       - run: cd mionative/native && cross build --release --target x86_64-pc-windows-msvc
       - run: ls mionative/native/target
