--- a/.github/workflows/cross_publish.yml
+++ b/.github/workflows/cross_publish.yml
@@ -56,5 +56,4 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: result
-          path: ./native
-      - run: ls
+      - run: ls -R && cd .. && ls -R
