--- a/.github/workflows/cross_publish.yml
+++ b/.github/workflows/cross_publish.yml
@@ -16,8 +16,6 @@ jobs:
       matrix:
         # a list of all the targets
         include:
-          - TARGET: x86_64-unknown-linux-gnu # tested in a debian container on a mac
-            OS: ubuntu-latest
           - TARGET: x86_64-unknown-linux-musl # test in an alpine container on a mac
             OS: ubuntu-latest
           - TARGET: aarch64-unknown-linux-gnu # tested on aws t4g.nano
@@ -31,6 +29,7 @@ jobs:
       NAME: rust cross compile
       TARGET: ${{ matrix.TARGET }}
       OS: ${{ matrix.OS }}
+      MILL_RUST_TARGET: ${{ matrix.TARGET }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
@@ -51,10 +50,25 @@ jobs:
   download:
     needs: cross
     runs-on: ubuntu-latest
+    env:
+      MILL_RUST_TARGET: x86_64-unknown-linux-gnu
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-gnu
+          override: true
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '8'
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
           name: result
-          path: ./native
-      - run: ls -R
+          path: library/native/
+      - run: chmod +x millw
+      - run: ./millw fastbloomjvm.compileNative
+      - run: ./millw fastbloomjvm.jar
+      - run: ls -R library/native/
